# RustPetProjects

calculator/src/: main.rs
csvParser/: Cargo.toml  build.rs  users.csv
csvParser/src/: main.rs
guessing_game/src/: main.rs
minigrep/src/: lib.rs  main.rs
randomizer/: Cargo.toml
randomizer/src/: main.rs
rectangle/: Cargo.toml
rectangle/src/: main.rs
remind_bot/: Cargo.toml
remind_bot/src/: lib.rs  main.rs  reminder_core.rs
