[package]
name = "remind_bot"
version = "0.1.0"
edition = "2024"

[dependencies]
teloxide =  {version = "0.15.0", features = ["macros"] }
dptree = "0.3.0"
tokio = { version = "1.44.2", features = ["macros", "rt-multi-thread"] }
chrono = "0.4.41"
humantime = "2.2.0"
lazy_static = "1.5.0"
strum = "0.25"
strum_macros = "0.25"
once_cell = "1.19"
tokio-retry = "0.3"